--- a/block-BHaabv/index.html
+++ b/block-BHaabv/index.html
@@ -16,15 +16,22 @@
            <div><h1>Social Media Dashboard</h1>
             <p class="header-p">Total Followers:23,004</p>
            </div>
-           <div class="mode">
-            <span>Dark Mode</span>
-            <a class="dark-mode" href="#"><i class="fa-solid fa-toggle-off"></i></a>
-           </div> 
+           <div class="btn-container flex" >
+            <span>dark mode</span>
+            <div class="btn">
+                <div class="circle"></div>
+
+            </div>
+
+           </div>
         </div>
     </header>
     <main>
         <section class="container hero flex">
+           
+
             <div class="box">
+                <div class="border-top"></div>
                 <div class="box-content">
                     <a class="fb" href="#"><img src="./media/fb.png" alt=""></a>
                     <span class="span">@nathanf</span>
